# sqlalchemy_tasks

./: README.md
hw_alchemy/: alembic.ini  hw_alchemy.db  my_select.py  pyproject.toml
hw_alchemy/alembic/versions/: 32bb17998282_init.py  b0be6586a0cb_init.py
hw_alchemy/src/: db.py  models.py
