[tool.poetry]
name = "hw-alchemy"
version = "0.1.0"
description = ""
authors = ["Cheburator <sashadanilenko06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
sqlalchemy = "^2.0.21"
faker = "^19.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
